add showkeyskay package

--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -7,9 +7,10 @@
 \usepackage{hyperref} % for hyperlinks in references
 
 \usepackage{caption} % for \caption*
-\usepackage{mdframed}
+\usepackage{mdframed} % for framed text and formulas
 
 \usepackage[dvipsnames]{xcolor}
+\usepackage[notref,notcite,color]{showkeyskay}\definecolor{labelkey}{rgb}{1,0,0.5}
 
 \textwidth 170mm
 \textheight 230mm
