--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -1,16 +1,19 @@
 \documentclass[12pt]{article}
-
-\usepackage{orcidlink} % to insert a hyperlinked ORCiD logo
+%\usepackage{orcidlink} % to insert a hyperlinked ORCiD logo
 \usepackage{amssymb}
 \usepackage{physics}
 %\usepackage{cite} % may be useful for different formats of numerical citation
-\usepackage{hyperref} % for hyperlinks in references
+%\usepackage{hyperref} % for hyperlinks in references
 
 \usepackage{caption} % for \caption*
 \usepackage{mdframed} % for framed text and formulas
 
 \usepackage[dvipsnames]{xcolor}
+
 \usepackage[notref,notcite,color]{showkeyskay}\definecolor{labelkey}{rgb}{1,0,0.5}
+\newcommand{\be}{\begin{equation}}
+\newcommand{\ee}{\end{equation}}
+\newcommand{\e}{\mbox{e}}
 
 \textwidth 170mm
 \textheight 230mm
@@ -19,8 +22,8 @@
 \title{Overview: a cell fluid model with Curie-Weiss interaction}
 
 \author{R.V.~Romanik
-	\\ \small Institute for Condensed Matter Physics, NAS of Ukraine 
-	\\ \small 1~Svientsitskii Street, 79011, Lviv, Ukraine 
+	\\ \small Institute for Condensed Matter Physics, NAS of Ukraine
+	\\ \small 1~Svientsitskii Street, 79011, Lviv, Ukraine
 	\\ \small romanik@icmp.lviv.ua}
 %\author{R.V.~Romanik \\ Institute for Condensed Matter Physics, NAS of Ukraine}
 
@@ -35,7 +38,7 @@
 		\textbf{Keywords:} Cell fluid model, Curie-Weiss interaction.
 	}
 	\section{Introduction}
-	The cell model was introduced and described in~\cite{KKD2018,KKD2020}. This model possesses an exact solution in the case of Curie-Weiss interaction. The exact asymptotic expression for the grand partition function was obtained in~\cite{KKD2020}.
+	The cell model was introduced and described in~\cite{KKD18,KKD20}. This model possesses an exact solution in the case of Curie-Weiss interaction. The exact asymptotic expression for the grand partition function was obtained in~\cite{KKD20}.
 	The goal of this manuscript is to summarize the notation, properly account for quantity dimensions corresponding to physical problems.
 	
 	\section{\label{sec:model} Model}
@@ -68,7 +71,7 @@
 			0, \quad x \notin \Delta_l.
 		\end{array}
 		\right.
-	\end{equation} 
+	\end{equation}
 	The first term in $\Phi_{N_v}$ describes the pairwise attraction between all particles and is characterized by $J_1 > 0$. The second term in $\Phi_{N_v}$ describes the repulsion between two particles contained within the same cell $\Delta_l$ and is characterized by $J_2 > 0.$ For convenience, in $W_{N_v}$ above the self-interaction term $\Phi_{N_v}(x,x)$ is included, which does not affect the physics of the model. Two cases are possible, either two particles belong to the same cell or to different ones. Explicitly, one has
 	\begin{equation}
 		\Phi_{N_v}(x, y) = \left\{
@@ -79,10 +82,10 @@
 		\end{array}
 		\right.
 	\end{equation}
-	In~\cite{KKD2020}, the notation $\abs{\gamma}$ was used to denote the number of points (particles) in configuration $\gamma$, thus $\abs{\gamma} \equiv N$.
+	In~\cite{KKD20}, the notation $\abs{\gamma}$ was used to denote the number of points (particles) in configuration $\gamma$, thus $\abs{\gamma} \equiv N$.
 	
 	\begin{mdframed}[linecolor=black,linewidth=1pt,leftline=true]
-	If the notation from~\cite{HansenMcDonald2013} is followed, the previous formulas can be rewritten as follows. The space coordinate of the $i$-th particle is denoted by $\vb{r}_i$, and thus the configuration of $N$ particles is defined by $\gamma = \{\vb{r}^N\}$, where $\vb{r}^N \equiv \vb{r}_1, ..., \vb{r}_N$. The interaction energy is expressed as (cf.~\cite[eq.~(2.5.16)]{HansenMcDonald2013})
+	If the notation from~\cite{HansenMcDonald13} is followed, the previous formulas can be rewritten as follows. The space coordinate of the $i$-th particle is denoted by $\vb{r}_i$, and thus the configuration of $N$ particles is defined by $\gamma = \{\vb{r}^N\}$, where $\vb{r}^N \equiv \vb{r}_1, ..., \vb{r}_N$. The interaction energy is expressed as (cf.~\cite[eq.~(2.5.16)]{HansenMcDonald13})
 	\begin{eqnarray*}
 		W_{N_v}(\vb{r}^N) & = & \frac{1}{2} \sum_{\vb{r}_i,\vb{r}_j \in \gamma} \Phi_{N_v} (\vb{r}_i,\vb{r}_j).
 		\\
@@ -102,14 +105,14 @@
 		\end{array}
 		\right.
 	\end{equation*}
-	Unlike~\cite[eq.~(2.5.16)]{HansenMcDonald2013}, we do not exclude term with $i = j$ in the expression for $W_{N_v}$ due to the self-interaction.
+	Unlike~\cite[eq.~(2.5.16)]{HansenMcDonald13}, we do not exclude term with $i = j$ in the expression for $W_{N_v}$ due to the self-interaction.
 	\end{mdframed}
 	
 	\textbf{Stability.} For stability of interaction the following condition must hold
 	\begin{equation*}
 		J_2 > J_1
 	\end{equation*}
-	to satisfy such inequality~\cite{KKD2020,Ruelle1970}
+	to satisfy such inequality~\cite{KKD20,Ruelle70}
 	\begin{equation}
 		\int_{V} \Phi_{N_v}(x,y) {\rm d}y > 0, \quad \text{for all } x \in V.
 	\end{equation}
@@ -118,12 +121,12 @@
 		\int_{V} \Phi_{N_v}(x,y) {\rm d}y & = & \left(-\frac{J_1}{N_v} + J_2\right)v - (N_v - 1) \frac{J_1}{N_v}v
 		\\
 		& = & (J_2 - J_1)v > 0.
-	\end{eqnarray*} 
+	\end{eqnarray*}
 	The ratio of the two energy constants is denoted by
 	$$a = J_2/J_1,$$
 	and thus $a > 1.$
 	
-	\textbf{The grand partition function} is expressed as follows~\cite[eqs.~(2.4.6) and~(2.3.13)]{HansenMcDonald2013}
+	\textbf{The grand partition function} is expressed as follows~\cite[eqs.~(2.4.6) and~(2.3.13)]{HansenMcDonald13}
 	\begin{equation*}
 		\Xi = \sum_{N=0}^{\infty}\frac{z^N}{N!} \int_{V} \dotsc \int_{V} \exp(-\beta W_{N_v}(\gamma)) {\rm d} x_1 \dotsc {\rm d} x_N
 	\end{equation*}
@@ -134,7 +137,7 @@
 	$\beta = k_{\rm B} T$ the inverse temperature, $k_{\rm B}$ the Boltzmann constant, $T$ the temperature, $\mu$ the chemical potential, $\Lambda = (2\pi\beta\hbar^2/m)^{1/2}$ the de Broglie thermal wavelength, $\hbar$ the Planck constant, $m$ the mass of a particle. In the grand partition function the integration goes over all configurations with $N$ particles and then the summation goes over all positive integer values of $N$.
 	
 	\begin{mdframed}[linecolor=black,linewidth=1pt,leftline=true]
-		Alternatively, in notation from~\cite{HansenMcDonald2013}, the grand partition function is expressed as [cf. eqs.~(2.4.6) and~(2.3.13)]
+		Alternatively, in notation from~\cite{HansenMcDonald13}, the grand partition function is expressed as [cf. eqs.~(2.4.6) and~(2.3.13)]
 		\begin{equation}
 			\Xi=\sum_{N=0}^{\infty}\frac{z^N}{N!}Z_N,
 		\end{equation}
@@ -145,18 +148,18 @@
 		with ${\rm d} \vb{r}^N \equiv {\rm d}{\vb r_1} \dotsc {\rm d}{\vb r_N}$.
 	\end{mdframed}
 	
-	\textbf{Reduced quantities.} Natural units for energy and length in the model are $J_1$ and $c$, respectively. It is standard practice to express thermodynamic results in terms of dimensionless quantities normalized by these natural units. The advantage of using such quantities is that their numerical values are typically of the order of unity, which simplifies analysis. Thus, we introduce the following reduced quantities: 
+	\textbf{Reduced quantities.} Natural units for energy and length in the model are $J_1$ and $c$, respectively. It is standard practice to express thermodynamic results in terms of dimensionless quantities normalized by these natural units. The advantage of using such quantities is that their numerical values are typically of the order of unity, which simplifies analysis. Thus, we introduce the following reduced quantities:
 	%the reduced temperature $T^* = k_{\rm B} T / J_1$, the reduced inverse temperature $p = \beta J_1$, reduced chemical potential $\mu^* = \mu / J_1$, and the reduced pressure $P^* = Pv/J_1$.
 	\begin{eqnarray*}
-		T^* = \frac{k_{\rm B} T}{J_1} & \quad & \text{ -- the reduced temperature;} 
+		T^* = \frac{k_{\rm B} T}{J_1} & \quad & \text{ -- the reduced temperature;}
 		\\
 		p = \beta J_1 = \frac{1}{T^*} & \quad & \text{ -- the reduced inverse temperature;}
 		\\
 		\mu^* = \frac{\mu}{J_1} & \quad & \text{ -- the reduced chemical potential;}
-		\\ 
+		\\
 		P^* = \frac{Pv}{J_1} & & \text{ -- the reduced pressure.}
 	\end{eqnarray*}
-	For any dimensional quantity $Q$, it is convenient to denote its reduced counterpart by $Q^*$. To maintain consistency with other thermodynamic quantities, it may be beneficial to use $\beta^*$ instead of $p$ for the reduced inverse temperature (cf.~\cite{RioEtAl2013}).
+	For any dimensional quantity $Q$, it is convenient to denote its reduced counterpart by $Q^*$. To maintain consistency with other thermodynamic quantities, it may be beneficial to use $\beta^*$ instead of $p$ for the reduced inverse temperature (cf.~\cite{RDGMR13}).
 	
 	\subsection{Partition function transformation}
 	Note the following summation:
@@ -174,13 +177,13 @@
 		\begin{equation}
 			\label{eq:gpf1_alt}
 			\Xi = \sum_{N=0}^{\infty} \frac{\Lambda^{-3N}}{N!}
-			\int 
+			\int
 			\exp[\beta\mu N + \frac{\beta^*}{2N_{v}} N^2 - \frac{a\beta^*}{2} \sum_{\vb{r}_i,\vb{r}_j \in \gamma} \sum_{l=1}^{N_v} \mathbb{I}_{\Delta_l}(\vb{r}_i)\mathbb{I}_{\Delta_l}(\vb{r}_j)] {\rm d} \vb{r}^N.
 		\end{equation}
 	\end{mdframed}
-	Equations~\eqref{eq:gpf1} and~\eqref{eq:gpf1_alt} can be compared with~\cite[(2.5)]{KKD2020}.
+	Equations~\eqref{eq:gpf1} and~\eqref{eq:gpf1_alt} can be compared with~\cite[(2.5)]{KKD20}.
 	
-	For a given $l = 1, \cdots , N_v$ and a configuration $\gamma$, we set $\gamma_l = \gamma \cap \Delta_l,$ that is, $\gamma_l$ is the part of the configuration contained in $\Delta_l$. Then, $N_l$ or $\abs{\gamma_l}$ stands for the number of points (particles) of $\gamma$ contained in $\Delta_l$. 
+	For a given $l = 1, \cdots , N_v$ and a configuration $\gamma$, we set $\gamma_l = \gamma \cap \Delta_l,$ that is, $\gamma_l$ is the part of the configuration contained in $\Delta_l$. Then, $N_l$ or $\abs{\gamma_l}$ stands for the number of points (particles) of $\gamma$ contained in $\Delta_l$.
 	
 	Note the following summation results:
 	\begin{equation}
@@ -208,7 +211,7 @@
 	\end{equation}
 	Combining these formulas, we get
 	\begin{eqnarray}
-		\sum_{x,y \in \gamma} \Phi_{N_v}(x,y) & = & \sum_{l,l'=1}^{N_v} \sum_{x \in \Delta_l} \sum_{y \in \Delta_{l'}} \Phi_{N_v}(x,y) 
+		\sum_{x,y \in \gamma} \Phi_{N_v}(x,y) & = & \sum_{l,l'=1}^{N_v} \sum_{x \in \Delta_l} \sum_{y \in \Delta_{l'}} \Phi_{N_v}(x,y)
 		\nonumber\\
 		& = & - \frac{J_1}{N_v} \left(\sum_{l=1}^{N_v} N_l\right)^2 + J_2\sum_{l=1}^{N_v}N_l^2
 		\\
@@ -217,6 +220,35 @@
 	
 	
 	\section{Known results}
+
+\section{The special function $K_0$ and its integral representation}
+
+\be
+K_0(z)=\sum_{n\ge0}\frac1{n!}\,\e^{zn-an^2}
+\ee
+
+\be
+K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+\mbox{exp}\left(\e^{z+ix\sqrt a}\right)
+\ee
+
+In the form of a manifestly real integral,
+\be\label{KOR}
+K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]
+\cos\left[\e^z\sin(x\sqrt a\,)\right]
+\ee
+
+Can you calculate the asymptotic behavior as $z\to+\infty$ of two last integrals?
+
+I have succeeded to calculate the leading $z\to+\infty$ asymptotics only for two integrals
+\be
+\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]\qquad\mbox{and}\qquad
+\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+\cos\left[\e^z\sin(x\sqrt a\,)\right]
+\ee
+resulting from \eqref{KOR} by deleting one of the last two factors.
 	
 	%\bibliographystyle{elsarticle-num}
 	%\bibliography{fluids_cv,books_romanik_bibliography,articles}
@@ -227,4 +259,4 @@
 	%\bibliographystyle{cmpj} % still looking for the best style
 	%\bibliography{fluids_general} % BibTeX / BibLaTeX should be used
 	
-\end{document}
+\end{document} 
