--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -401,12 +401,23 @@ Can you calculate the asymptotic behavior as $z\to+\infty$ of two last integrals
 
 I have succeeded to calculate the leading $z\to+\infty$ asymptotics only for two integrals
 \be
-\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+K_0^{(a)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
 \mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]\qquad\mbox{and}\qquad
-\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+\ee
+\be
+K_0^{(b)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
 \cos\left[\e^z\sin(x\sqrt a\,)\right]
 \ee
 resulting from \eqref{KOR} by deleting one of the last two factors.
+
+The leading asymptotics are the following
+\begin{equation}
+	K_0^{(a)}(z) \sim \frac{\exp({\rm e}^z)}{\sqrt{2 {\rm e}^z}}, \quad \text{as } z \to +\infty
+\end{equation}
+and
+\begin{equation}
+	K_0^{(b)}(z) \sim \sqrt{\frac{2}{\pi {\rm e}^z}} \cos({\rm e}^z - \pi/4), \quad \text{as } z \to +\infty.
+\end{equation}
 	
 
 	\appendix
