--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{amssymb}
 \usepackage{physics}
-%\usepackage{orcidlink} % to insert a hyperlinked ORCiD logo
+\usepackage{orcidlink} % to insert a hyperlinked ORCiD logo
 %\usepackage{cite} % may be useful for different formats of numerical citation
 %\usepackage{hyperref} % for hyperlinks in references
 \usepackage[notref,notcite,color]{showkeyskay}\definecolor{labelkey}{rgb}{1,0,0.5}
