--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -6,6 +6,7 @@
 %\usepackage{cite} % may be useful for different formats of numerical citation
 \usepackage{hyperref} % for hyperlinks in references
 \usepackage{graphicx}
+\usepackage[notref,notcite,color]{showkeyskay}\definecolor{labelkey}{rgb}{1,0,0.5}
 
 \usepackage{caption} % for \caption*
 \usepackage{mdframed}
@@ -13,6 +14,12 @@
 \usepackage[dvipsnames]{xcolor}
 
 \numberwithin{equation}{section}
+
+\newcommand{\be}{\begin{equation}}
+\newcommand{\ee}{\end{equation}}
+\newcommand{\e}{\mbox{e}}
+\newcommand {\mm}[1]{\quad\mbox{#1}\quad}
+\newcommand {\MM}[1]{\qquad\mbox{#1}\qquad}
 
 \textwidth 170mm
 \textheight 230mm
@@ -498,6 +505,44 @@
 	\end{equation}
 	
 	
+	\section{The special function $K_0$ and its integral representation}
+	\be\label{KOZ}
+	K_0(z)=\sum_{n\ge0}\frac1{n!}\,\e^{zn-an^2}
+	\ee
+	Note that sum in \eqref{KOZ} is precisely of the same functional form as that in the definition \eqref{ZGR} of the grand partition function up to replacements
+	\be
+	N\to n,\qquad z\to\e^{-z},\MM{and}Z_n\to\e^{-an^2}.
+	\ee
+	The integral representation of $K_0(z)$ is given by
+	\be
+	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	\mbox{exp}\left(\e^{z+ix\sqrt a}\right),
+	\ee
+	or, in the form of a manifestly real integral,
+	\be\label{KOR}
+	K_0(z)=\frac1{2\sqrt\pi}\int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]
+	\cos\left[\e^z\sin(x\sqrt a\,)\right].
+	\ee
+	Can you calculate the asymptotic behavior as $z\to+\infty$ of two last integrals?
+	I have succeeded to calculate the leading $z\to+\infty$ asymptotics only for two integrals
+	\be
+	K_0^{(a)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	\mbox{exp}\left[\e^z\cos(x\sqrt a\,)\right]\qquad\mbox{and}\qquad
+	\ee
+	\be
+	K_0^{(b)}(z) = \frac1{2\sqrt\pi} \int_{-\infty}^\infty\e^{-\frac{x^2}4}
+	\cos\left[\e^z\sin(x\sqrt a\,)\right]
+	\ee
+	resulting from \eqref{KOR} by deleting one of the last two factors.
+	The leading asymptotics are the following
+	\begin{equation}
+		K_0^{(a)}(z) \sim \frac{\exp({\rm e}^z)}{\sqrt{2 {\rm e}^z}}, \quad \text{as } z \to +\infty
+	\end{equation}
+	and
+	\begin{equation}
+		K_0^{(b)}(z) \sim \sqrt{\frac{2}{\pi {\rm e}^z}} \cos({\rm e}^z - \pi/4), \quad \text{as } z \to +\infty.
+	\end{equation}
 	
 	\appendix
 	
@@ -555,10 +600,6 @@
 
 	
 	\bibliographystyle{elsarticle-num}
-	%\bibliography{fluids_cv,books_romanik_bibliography,articles}
 	\bibliography{books,articles}
-	
-	%\bibliographystyle{cmpj} % still looking for the best style
-	%\bibliography{fluids_general} % BibTeX / BibLaTeX should be used
 	
 \end{document}
